--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -4,7 +4,13 @@ env:
 window:
   decorations: "none"
 
-background_opacity: 0.785
+padding:
+  x: 5
+  y: 5
+
+dynamic_padding: true
+
+background_opacity: 0.875
 
 font:
   normal:
@@ -29,29 +35,28 @@ key_bindings:
   - { key: V, mods: Control|Shift, action: Paste }
 
 colors:
-  name: Matrix
-  author: OK100
   primary:
-    background: "#000000"
-    foreground: "#00cc00"
-  cursor:
-    text: "#000000"
-    cursor: "#00cc00"
+    background: '#000000'
+    foreground: '#00ff00'
+
+  # Normal colors
   normal:
-    black: "#000000"
-    red: "#55ff55"
-    green: "#00cc00"
-    yellow: "#00cc00"
-    blue: "#005500"
-    magenta: "#55ff55"
-    cyan: "#00cc00"
-    white: "#00cc00"
+    black: '#2e3436'
+    red: '#cc0000'
+    green: '#73d216'
+    yellow: '#edd400'
+    blue: '#3465a4'
+    magenta: '#75507b'
+    cyan: '#06989a'
+    white: '#d3d7cf'
+
+  # Bright colors
   bright:
-    black: "#000000"
-    red: "#55ff55"
-    green: "#55ff55"
-    yellow: "#55ff55"
-    blue: "#005500"
-    magenta: "#55ff55"
-    cyan: "#55ff55"
-    white: "#00cc00"
+    black: '#2e3436'
+    red: '#ef2929'
+    green: '#8ae234'
+    yellow: '#fce94f'
+    blue: '#729fcf'
+    magenta: '#ad7fa8'
+    cyan: '#34e2e2'
+    white: '#eeeeec'
