--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,2 +1,19 @@
 set -g mouse on
-# set mouse=a
+
+set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",$TERM:Tc"
+
+# requires tpm
+# comment out if tpm is not in system
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# dracula settings
+set -g @plugin 'dracula/tmux'
+# set -g @dracula-cpu-usage true
+# set -g @dracula-gpu-usage true
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-location false
+
+# keep this line at the very bottom
+run '~/.tmux/plugins/tpm/tpm'
