--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,10 +10,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # dracula settings
 set -g @plugin 'dracula/tmux'
-# set -g @dracula-cpu-usage true
-# set -g @dracula-gpu-usage true
+set -g @dracula-cpu-usage true
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-location false
+set -g @dracula-show-powerline true
+set -g @dracula-plugins "cpu-usage ram-usage weather time"
 
 # keep this line at the very bottom
 run '~/.tmux/plugins/tpm/tpm'
