Modified setup for Kitty to use Dracula theme

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,5 +2,12 @@ enable_audio_bell no
 
 hide_window_decorations yes
 
-background_opacity 0.75
+background_opacity 0.875
 background_image_layout tiled
+
+font_family         Noto Mono Nerd Font Complete Mono
+bold_font           auto
+italic_font         auto
+bold_italic_font    auto
+
+include ./dracula.conf
