--- a/docker/autoinstall-testenv/Dockerfile
+++ b/docker/autoinstall-testenv/Dockerfile
@@ -23,6 +23,6 @@ RUN mkdir "$HOME"/repos
 RUN git clone https://github.com/bonohub13/dotfiles "$HOME/repos/dotfiles"
 RUN mkdir -p "$HOME/.config"
 RUN cd "$HOME/repos/dotfiles" && ./autoinstall.sh yes
-RUN mkdir -p "$HOME/.cache/zsh" && touch "$HOME/.cache/zsh/history"
+RUN mkdir -p "$HOME/.cache/zsh" "$HOME/.ssh" && touch "$HOME/.cache/zsh/history"
 
 CMD /bin/zsh
