--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,10 +2,11 @@ enable_audio_bell no
 
 hide_window_decorations yes
 
+dynamic_background_opacity yes
 background_opacity 0.875
 background_image_layout tiled
 
-font_family         Noto Mono Nerd Font Complete Mono
+font_family         FiraCode Nerd Font
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
