Changed font for Kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@ dynamic_background_opacity yes
 background_opacity 0.875
 background_image_layout tiled
 
-font_family         FiraCode Nerd Font
+font_family         FiraCode
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
