--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,4 +11,15 @@ bold_font           auto
 italic_font         auto
 bold_italic_font    auto
 
-include ./dracula.conf
+enabled_layouts tall
+
+map ctrl+t new_tab
+map ctrl+s launch --location=vsplit
+map ctrl+r layout_action rotate
+map ctrl+h previous_tab
+map ctrl+l next_tab
+map ctrl+j next_window
+map ctrl+k previous_window
+map ctrl+shift+^ change_font_size all +1.0
+
+include ./tokyonight_moon.conf
